fix overflow issues

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -482,20 +482,19 @@ aside li {
   display: inline-block;
 }
 
-section > h2 {
+.our-story-section > h2 {
   font-size: 4rem;
   font-family: 'Rye';
   font-weight: 600;
   margin-bottom: 1rem;
 }
-
-section > h3 {
+.our-story-section > h3 {
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 1rem;
 }
 
-section > p {
+.our-story-section > p {
   font-size: 1.5rem;
   margin-bottom: 1rem;
 }
